Finishing html structure

--- a/index.html
+++ b/index.html
@@ -139,5 +139,40 @@
 				</div>
 			</div>
 		</main>
+		<footer>
+			<div id="mc-download-app">
+				<div>
+					<img alt="McDonalds Logo" src="img/logosombra.png" />
+				</div>
+				<div class="flex-col">
+					<h2 class="flex-all">Descargate nuestra App</h2>
+					<p>
+						Descargate nuestra App y no te pierdas nuestras novedades
+					</p>
+				</div>
+				<div class="all-gray">
+					<a class="btn" href="#">Descargar ahora</a>
+				</div>
+			</div>
+			<img alt="decoracion de gotas" src="img/gotas.png" />
+			<div id="mc-follow" class="all-gray">
+				<h1>Siguenos</h1>
+				<a href="#"><img alt="Facebook" src="img/facebook.png" /></a>
+				<a href="#"><img alt="Instagram" src="img/instagram.png" /></a>
+			</div>
+			<hr />
+			<div class="flex-row" id="mc-footer-w-apps">
+				<a href="#">
+					<img alt="App Store" src="img/apple.png" />
+				</a>
+				<a href="#">
+					<img alt="Google Play Store" src="img/google.png" />
+				</a>
+				<p>
+					<img alt="Mc Donalds Logo" src="img/logobgverde.png" />
+					Copyright &copy; 2020 McDonald's Hispania
+				</p>
+			</div>
+		</footer>
 	</body>
 </html>
